--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,9 @@
 <body>
   <h1><a href="1.html" target="_blank"><u><strong>WEB</strong></u></a></h1>
   <ol>
-    <li><a href="2.html" target="_blank">html</a></li>
-    <li><a href="3.html" target="_blank" title="COCO">CSS</a></li>
-    <li><a href="4.html" target="_blank" title="Gamzi">Javascript</a></li>
+    <li><a href="2.html" target="_blank" title="html">html</a></li>
+    <li><a href="3.html" target="_blank" title="CSS">CSS</a></li>
+    <li><a href="4.html" target="_blank" title="Javascript">Javascript</a></li>
   </ol>
   <p>
     If you want to know anything on this site, just click it.
